--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,6 +11,9 @@
     max-width: 1024px;
     margin: 20px 0px 100px 0px;
 }
+.headerContainer.listMode{
+    margin: 20px 0px 0px 0px;
+}
 .headerList{
     display: flex;
     gap: 40px;
@@ -69,4 +72,36 @@ cursor: pointer;
 }
 .headerSearchText{
 cursor: pointer;
+}
+
+.options{
+    position: absolute;
+    top: 50px;
+    background-color: white;
+    color: gray;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+}
+.optionItem{
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+.optionCounter{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 13px;
+    color: black;
+}
+.optionCounterButton{
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.optionCounterButton:disabled{
+    cursor: not-allowed;
 }
