--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -69,6 +69,7 @@ cursor: pointer;
 .date{
     position: absolute;
     top: 50px;
+    z-index: 2;
 }
 .headerSearchText{
 cursor: pointer;
@@ -81,6 +82,7 @@ cursor: pointer;
     color: gray;
     border-radius: 5px;
     box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+    z-index: 2;
 }
 .optionItem{
     width: 200px;
