--- a/src/components/PropertyList.css
+++ b/src/components/PropertyList.css
@@ -1,25 +1,32 @@
-.featured{
+.pList{
     width: 100%;
     max-width: 1024px;
     display: flex;
     justify-content: space-between;
     gap: 20px;
-    z-index: 1;
 }
 
-.featuredItem{
-    position: relative;
-    color: white;
+.pListItem{
+    flex: 1;
     border-radius: 10px;
+   
     overflow: hidden;
-    height: 250px;
+    
+    cursor: pointer;
 }
-.featuredImage{
+
+.pListImg{
+    
     width: 100%;
+    height: 150px;
     object-fit: cover;
 }
 
-.featuredTitles{
-    position: absolute;
-    bottom: 30px;
+.pListTitles>h1{
+    font-size: 18px ;
+}
+
+.pListTitles>h2{
+    font-size: 14px ;
+    font-weight: 300;
 }
